# sfz-opcode-checker

./: .appveyor.yml  .editorconfig  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
.travis/: before_install.sh  install.sh  script.sh
sources/: main.cpp  main.h  opcode_collecting_parser.h  sfzformat_db.cpp  sfzformat_db.h
